--- a/src/main/webapp/Dashboard.html
+++ b/src/main/webapp/Dashboard.html
@@ -117,17 +117,25 @@
               </div>
             </li>
             <li>
-              <a href="#" class="nav-link px-3">
+              <a href="Dashboard.html" class="nav-link px-3">
                 <span class="me-2"><i class="bi bi-graph-up"></i></span>
-                <span>Charts</span>
+                <span>Marketing Department Questions</span>
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link px-3">
+              <a href="Dashboard2.html" class="nav-link px-3">
                 <span class="me-2"><i class="bi bi-table"></i></span>
-                <span>Tables</span>
+                <span>Management Questions</span>
               </a>
             </li>
+            <li>
+              <a href="Dashboard3.html" class="nav-link px-3">
+                <span class="me-2"><i class="bi bi-graph-down"></i></span>
+                <span>Research Questions</span>
+              </a>
+            </li>
+
+
           </ul>
         </nav>
       </div>
@@ -139,7 +147,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <h4><B>Welcome to the Insurance Analytics Dashboard!</B></h4>
+            <h4><B>Welcome to the Marketing Dashboard!</B></h4>
           </div>
         </div>
         <div class="row">
@@ -215,6 +223,8 @@
         </div>
       </div>
     </main>
+
+
     <div id="myModal" class="modal">
         <div class="modal-content">
           <div class="modal-header">
