--- a/src/main/webapp/Dashboard2.html
+++ b/src/main/webapp/Dashboard2.html
@@ -201,7 +201,9 @@
                             <span id="rightChart" class="me-2"><i class="bi bi-bar-chart-fill"></i></span>
                         </div>
                         <div class="card-body">
-                            <canvas id="pieChart" width="400" height="200"></canvas>
+                            <div class="bong">
+                                <canvas id="pieChart" width="400" height="200"></canvas>
+                            </div>
                         </div>
                     </div>
                 </div>
