--- a/src/main/webapp/Dashboard.html
+++ b/src/main/webapp/Dashboard.html
@@ -119,22 +119,15 @@
             <li>
               <a href="Dashboard.html" class="nav-link px-3">
                 <span class="me-2"><i class="bi bi-graph-up"></i></span>
-                <span>Marketing Department Questions</span>
+                <span>Marketing Department</span>
               </a>
             </li>
             <li>
               <a href="Dashboard2.html" class="nav-link px-3">
                 <span class="me-2"><i class="bi bi-table"></i></span>
-                <span>Management Questions</span>
+                <span>Management & Research</span>
               </a>
             </li>
-            <li>
-              <a href="Dashboard3.html" class="nav-link px-3">
-                <span class="me-2"><i class="bi bi-graph-down"></i></span>
-                <span>Research Questions</span>
-              </a>
-            </li>
-
 
           </ul>
         </nav>
